--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,31 +22,31 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android' // ✅ Added if Kotlin needed later
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 28
-
-    lintOptions {
-        disable 'InvalidPackage'
-    }
+    compileSdkVersion 33 // ✅ Updated to latest stable
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.wallpaper"
-        minSdkVersion 16
-        targetSdkVersion 28
+        applicationId "com.example.wallpapers" // ✅ Matches your package
+        minSdkVersion 19                     // ✅ Minimum for Play Store and plugins
+        targetSdkVersion 33                  // ✅ Latest supported
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true                 // ✅ Good for large apps
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
+            shrinkResources false
+            minifyEnabled false
         }
+    }
+
+    lintOptions {
+        disable 'InvalidPackage'
     }
 }
 
@@ -55,7 +55,8 @@ flutter {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0" // ✅ Optional, safe for V2
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test:runner:1.5.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
